web/css/UserAdd.css
:root {
  --background-color-button: #4f81bd;
  --background-color-button-hover: #629de4;
  --border-input: 1px solid #385D8A;
  --text-color-button: white;
}
* {
  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
  font-size: 15px;
}

form,
.user-complete {
  border: var(--border-input);
  margin: auto;
  margin-top: 70px;
  width: 60%;
  padding-left: 50px;
  padding-right: 50px;
  padding-top: 50px;
  padding-bottom: 40px;
  overflow: auto;
}

.user-complete {
  text-align: center;
}

.input-form,
.input-form-login {
  padding: 11px 20px;
  margin-bottom: 15px;
  margin-right: 35px;
  display: inline-block;
  width: 100px;
}

.selectdiv,
.add-confirm,
#name,
#user-id,
#custom-text {
  background-color: #e4f6ff;
  border: var(--border-input);
  margin-bottom: 25px;
  padding: 12px 20px;
  width: 40%;
  display: inline-block;
}

#description,
#des {
  background-color: #e4f6ff;
  border: var(--border-input);
  margin-bottom: 25px;
  padding: 12px 20px;
  vertical-align: middle;
  width: 55%;
  height: 100px;
  display: inline-block;
  resize: none;
}

input[type="file"] {
  direction: rtl;
  color: transparent;
}

#custom-button {
  padding: 10px;
  width: 120px;
  height: 45px;
  color: var(--text-color-button);
  background-color: var(--background-color-button);
  border: 1px solid var(--border-color-button);
  cursor: pointer;
  border-radius: 5px;
}

#custom-button:hover {
  background-color: var(--background-color-button-hover);
}

.button-submit {
  display: flex;
  align-items: center;
  justify-content: center;
}

.center-block {
  cursor: pointer;
  color: var(--text-color-button);
  background-color: var(--background-color-button);
  border: 2px solid var(--border-color-button);
  float: none;
  margin-top: 50px;
  margin-right: 20px;
  margin-left: 20px;

  padding: 12px 20px;
  border-radius: 10px;
  width: 160px;
  height: 60px;
}

.center-block:hover {
  background-color: var(--background-color-button-hover);
}

#back-home {
  /* padding: 10px; */
  float: right;
  width: 110px;
  height: 50px;
  color: var(--text-color-button);
  padding: 10px;
  background-color: var(--background-color-button);
  border: 1px solid var(--border-color-button);
  cursor: pointer;
  border-radius: 5px;
}

#back-home:hover {
  background-color: var(--background-color-button-hover);
}

#output {
  width: 100px;
  height: 100px;
  background-color: var(--background-color-button);
  vertical-align: middle;
}

span.error {
  box-sizing: content-box;
  color: #ff0000;
  margin-left: 160px;
  margin-bottom: 10px;
  display: inline-block;
  height: 20px;
  padding: 7px 20px;
  width: 545px;
  background-color: #ffffff;
}

#des {
  margin-top: 30px;
}

